--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
     "expo": "~54.0.23",
+    "expo-audio": "~1.0.14",
     "expo-av": "~16.0.7",
     "expo-document-picker": "~14.0.7",
     "expo-file-system": "~19.0.17",
     "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-video": "~3.0.14",
     "react": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-safe-area-context": "^5.6.2",
     "react-native-zip-archive": "^7.0.2"
   },
   "devDependencies": {
