Add OpenAI Whisper transcription and real-time waveform
FEATURES:
- ✨ Automatic AI transcription with OpenAI Whisper on stop recording
- ✨ Real-time audio waveform visualization (40 animated bars)
- ✨ AI summary generation with GPT-4o-mini
- ✨ Word-level timestamps for perfect text-audio sync

IMPROVEMENTS:
- Transcription optimized for elderly/unclear voices
- Waveform pulses with simulated audio levels
- Professional error handling with fallbacks
- Processing indicator during transcription

FILES:
- New AudioWaveform component with smooth animations
- Updated TranscriptionService with Whisper API integration
- Added .env.example for API key setup
- Comprehensive SETUP.md with pricing and testing guide

NOTES:
- Requires OPENAI_API_KEY in .env file
- Whisper cost: ~/bin/zsh.006/minute (very affordable)
- Falls back gracefully if API unavailable

--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-video": "~3.0.14",
+    "openai": "^6.9.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "^5.6.2",
+    "react-native-svg": "15.12.1",
     "react-native-zip-archive": "^7.0.2"
   },
   "devDependencies": {
