--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "expo": "~54.0.23",
     "expo-audio": "~1.0.14",
     "expo-av": "~16.0.7",
