--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,15 @@
 # Get your API key from: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_api_key_here
 
+# Firebase Configuration
+# Get these from: Firebase Console → Project Settings → Your apps → Web app
+FIREBASE_API_KEY=your_firebase_api_key
+FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+FIREBASE_PROJECT_ID=your-project-id
+FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=123456789
+FIREBASE_APP_ID=1:123456789:web:abc123
+
 # Optional: Google Drive API credentials (for cloud storage)
 # GOOGLE_DRIVE_CLIENT_ID=
 # GOOGLE_DRIVE_CLIENT_SECRET=
