--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-firebase/app": "^23.5.0",
+    "@react-native-firebase/auth": "^23.5.0",
+    "@react-native-firebase/firestore": "^23.5.0",
     "expo": "~54.0.23",
     "expo-audio": "~1.0.14",
     "expo-av": "~16.0.7",
@@ -19,6 +22,7 @@
     "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-video": "~3.0.14",
+    "firebase": "^12.6.0",
     "openai": "^6.9.0",
     "react": "19.1.0",
     "react-native": "0.81.5",
