--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "expo": "~54.0.23",
     "expo-audio": "~1.0.14",
     "expo-av": "~16.0.7",
+    "expo-constants": "~18.0.10",
     "expo-document-picker": "~14.0.7",
     "expo-file-system": "~19.0.17",
     "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-video": "~3.0.14",
+    "ffmpeg-kit-react-native": "^6.0.2",
     "firebase": "^12.6.0",
     "openai": "^6.9.0",
     "react": "19.1.0",
